r1: added helpers as dependency
Signed-off-by: Bob Ross <pianodaemon@gmail.com>

--- a/r1/pom.xml
+++ b/r1/pom.xml
@@ -10,5 +10,6 @@
         <module>../bbgum-jcli</module>
         <module>../erp-quimicos</module>
         <module>../bbgum-impt</module>
+        <module>../magic-helpers</module>
     </modules>
 </project>
