--- a/erp-quimicos/pom.xml
+++ b/erp-quimicos/pom.xml
@@ -30,6 +30,13 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.maxima</groupId>
+            <artifactId>magic-helpers</artifactId>
+            <version>1.0-Stable</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
